<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_watss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/watts"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Potência em Watts"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_tempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/tempo"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tempo de Uso"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_tarifa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tarifa"
        android:inputType="numberDecimal"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Valor do kWh"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_lightbulb_24"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/o_seu_gasto_de_energia_sera"
        android:gravity="center"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/text_resposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/text_resposta_mes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/calcular"
        />


</LinearLayout>